<resources>
    <string name="app_name">Dev-Kotlin</string>

    <string name="setting_url_shop">https://www.vertice.jp/company/about/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Access Co.,Ltd.</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">ホーム</string>
    <string name="menu_check">予約の確認</string>
    <string name="menu_personal">マイプロフィール</string>
    <string name="menu_shop">店舗情報</string>
    <string name="menu_mail">お問い合せ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_contact">add_contact</string>
    <string name="action_save">保存</string>
    <string name="action_back">戻る</string>
    <string name="action_delete">削除</string>

    <string name="button_seeDetails">詳細をみる</string>
    <string name="button_close">閉じる</string>
    <string name="button_next">次へ</string>

    <string name="empty_list_jp">データがありません。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
