<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_check"
                android:icon="@drawable/ic_menu_check"
                android:title="@string/menu_check"/>
        <item
                android:id="@+id/nav_personal"
                android:icon="@drawable/ic_menu_personal"
                android:title="@string/menu_personal"/>
        <item
                android:id="@+id/nav_shop"
                android:icon="@drawable/ic_menu_store"
                android:title="@string/menu_shop"/>
        <item
                android:id="@+id/nav_mail"
                android:icon="@drawable/ic_menu_mail"
                android:title="@string/menu_mail"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
